# core

./: CMakeLists.txt
include/echo/: access_mode.h  array.h  assert.h  concept.h  const_algorithm.h  contract.h  enable_if.h  enabled_apply.h  expand_evaluate.h  index.h  pragma.h  preprocessor.h  repeat_type.h  simd_allocator.h  static_allocator.h  test.h  type_traits.h  variadic_operator.h
test/: CMakeLists.txt  const_algorithm_test.cpp
unittest/: CMakeLists.txt  array_test.cpp  assert_test.cpp  concept_test.cpp  const_algorithm_test.cpp  contract2_test.cpp  contract_test.cpp  enabled_apply_test.cpp  index_test.cpp  repeat_type_test.cpp  simd_allocator_test.cpp  static_allocator_test.cpp  type_traits_test.cpp  variadic_operator_test.cpp
